[package]
name = "tiktoken-node"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi = { version = "2", features = ["tokio_rt"]}
napi = "2"
napi-derive = "2"
# tokio = "1"
tiktoken-rs = "0.3.2"
# futures = "0.3.27"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
